--- a/utils/WebServerTester/src/main/resources/templates/connecting.mustache
+++ b/utils/WebServerTester/src/main/resources/templates/connecting.mustache
@@ -1,7 +1,7 @@
 {{> header }}
-<h1>Waiting for connection...</h1>
+<h1 id="header-status">Waiting for connection...</h1>
 <p>SSID: <span class="data-ssid"></span></p>
-<p><span id="counter"></span> seconds...</p>
+<p id="counter-line"><span id="counter"></span> seconds...</p>
 <p>Connection status: <span id="wifi-status"></span></p>
 <p id="connection-success" style="display: none">
   Device successfully connected to network <span class="data-ssid"></span>.
@@ -48,7 +48,14 @@
 
   var connectionFailed = function () {
     document.getElementById('connection-failed').style.display = null;
+    document.getElementById('header-status').innerText = "Connection failed";
     timeout = true;
+  };
+
+  var connectionSuccess = function() {
+    document.getElementById('connection-success').style.display = null;
+    document.getElementById('counter-line').style.display = 'none';
+    document.getElementById('header-status').innerText = "Connected"
   };
 
   var tickCounter = function() {
@@ -59,8 +66,8 @@
     }
     setCounter(remainingSeconds--);
     if (this.status === 'WL_CONNECTED') {
-        document.getElementById('connection-success').style.display = null;
-        clearInterval(counterTicker);
+      connectionSuccess();
+      clearInterval(counterTicker);
     }
   };
 
