--- a/utils/WebServerTester/src/main/resources/templates/connecting.mustache
+++ b/utils/WebServerTester/src/main/resources/templates/connecting.mustache
@@ -1,5 +1,5 @@
 {{> header }}
-<h1 id="header-status">Waiting for connection...</h1>
+<h1 id="header-status">Loading...</h1>
 <p>SSID: <span class="data-ssid"></span></p>
 <p id="counter-line"><span id="counter"></span> seconds...</p>
 <p>Connection status: <span id="wifi-status"></span></p>
@@ -13,9 +13,10 @@
 </p>
 <script>
   var remainingSeconds = 60;
-  var status = null;
-  var ssid = null;
+  var wifiStatus = undefined;
+  var ssid = undefined;
   var timeout = false;
+  var lastNotIdleConnectionStatus = null;
 
   var fetchStatus = function() {
     return fetch('/status', {
@@ -33,14 +34,14 @@
 
     fetchStatus()
         .then(function (status) {
-          this.status = status.wifi.status;
+          this.wifiStatus = status.wifi.status;
           ssid = status.wifi.ssid;
 
-          document.getElementById('wifi-status').innerText = this.status;
+          document.getElementById('wifi-status').innerText = getStatusText();
 
           [].forEach.call(document.getElementsByClassName('data-ssid'), function(el) { el.innerText = ssid; });
 
-          if (this.status !== 'WL_CONNECTED' && !timeout) {
+          if (this.wifiStatus !== 'WL_CONNECTED' && !timeout) {
             setTimeout(fetchStatusLoop, 2000);
           }
         });
@@ -58,6 +59,18 @@
     document.getElementById('header-status').innerText = "Connected"
   };
 
+  var connectionIdle = function () {
+    document.getElementById('header-status').innerText = "Waiting for connection..."
+  };
+
+  var getStatusText = function() {
+      var status = this.wifiStatus;
+      if (lastNotIdleConnectionStatus && this.wifiStatus === 'WL_IDLE_STATUS') {
+          status += " (" + lastNotIdleConnectionStatus + ")"
+      }
+      return status;
+  };
+
   var tickCounter = function() {
     if (remainingSeconds < 0) {
       connectionFailed();
@@ -65,9 +78,15 @@
       return;
     }
     setCounter(remainingSeconds--);
-    if (this.status === 'WL_CONNECTED') {
+    if (this.wifiStatus === 'WL_CONNECTED') {
       connectionSuccess();
       clearInterval(counterTicker);
+    } else if (this.wifiStatus === 'WL_IDLE_STATUS') {
+      connectionIdle();
+    }
+
+    if (this.wifiStatus && this.wifiStatus !== 'WL_IDLE_STATUS') {
+        lastNotIdleConnectionStatus = this.wifiStatus;
     }
   };
 
