CaptivePortal - show target IP Address on /connecting page

--- a/utils/WebServerTester/src/main/resources/templates/admin/admin.mustache
+++ b/utils/WebServerTester/src/main/resources/templates/admin/admin.mustache
@@ -56,9 +56,18 @@
         </td>
         <td>{{data.lastWifiStatus}}</td>
       </tr>
+      <tr>
+        <td><label for="localIP">localIP: </label></td>
+        <td>
+          <input type="text" id="localIP" name="localIP" />
+        </td>
+        <td>{{data.localIP}}</td>
+      </tr>
     </table>
     <input type="submit" value="Apply"/>
   </form>
+
+
   <h2>Get template</h2>
   <div>
     <select id="get-template">
