--- a/utils/WebServerTester/src/main/resources/templates/connecting.mustache
+++ b/utils/WebServerTester/src/main/resources/templates/connecting.mustache
@@ -5,7 +5,8 @@
 <p>Connection status: <span id="wifi-status"></span></p>
 <p id="connection-success" style="display: none">
   Device successfully connected to network <span class="data-ssid"></span>.
-  Temporary network will shutdown any second soon! Disconnect from it and connect to <span class="data-ssid"></span> network.
+  Temporary network will shutdown any second soon! Disconnect from it, connect to <span class="data-ssid"></span> network,
+  and go to <a target="_blank" id="local-ip"></a>
 <p id="connection-failed" style="display: none">
   Timed out waiting for connection!
 </p>
@@ -17,6 +18,7 @@
   var ssid = undefined;
   var timeout = false;
   var lastWifiStatus = null;
+  var localIP;
 
   var fetchStatus = function() {
     return fetch('/status', {
@@ -36,7 +38,8 @@
         .then(function (status) {
           this.wifiStatus = status.wifi.status;
           this.lastWifiStatus = status.wifi.lastStatus;
-          ssid = status.wifi.ssid;
+          this.ssid = status.wifi.ssid;
+          this.localIP = status.wifi.localIP;
 
           document.getElementById('wifi-status').innerText = getStatusText();
 
@@ -57,7 +60,13 @@
   var connectionSuccess = function() {
     document.getElementById('connection-success').style.display = null;
     document.getElementById('counter-line').style.display = 'none';
-    document.getElementById('header-status').innerText = "Connected"
+    document.getElementById('header-status').innerText = "Connected";
+
+    var ipLink = "http://" + this.localIP;
+    var ipAnchor = document.getElementById('local-ip');
+    ipAnchor.innerText = ipLink;
+    ipAnchor.href = ipLink;
+
   };
 
   var connectionIdle = function () {
@@ -66,7 +75,7 @@
 
   var getStatusText = function() {
       var status = this.wifiStatus;
-      if (lastWifiStatus) {
+      if (this.lastWifiStatus && this.lastWifiStatus !== this.wifiStatus) {
           status += " (" + lastWifiStatus + ")"
       }
       return status;
