--- a/utils/WebServerTester/src/main/resources/templates/header.mustache
+++ b/utils/WebServerTester/src/main/resources/templates/header.mustache
@@ -14,6 +14,24 @@
     .centered {
       text-align: center;
     }
+    .hidden {
+      display: none;
+    }
+    .error {
+      color: red;
+    }
+    .loading-text {
+      color: gray;
+      font-style: italic;
+    }
+    .status-table td:first-child {
+      text-align: right;
+      white-space: nowrap;
+    }
+
+    .status-table td:nth-child(2) {
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
