--- a/utils/WebServerTester/src/main/resources/templates/root.mustache
+++ b/utils/WebServerTester/src/main/resources/templates/root.mustache
@@ -1,11 +1,107 @@
 {{> header }}
 <h1>Welcome!</h1>
 <h2>WiFi setup</h2>
-<form action="/connect" method="post">
+<table class="status-table">
+  <tr><td>Current status: </td><td id="current-wifi-status"></td></tr>
+  <tr class="wifi-details hidden"><td>SSID: </td><td id="wifi-ssid"></td></tr>
+  <tr class="wifi-details hidden"><td>IP: </td><td id="wifi-ip"></td></tr>
+  <tr><td>Soft AP status: </td><td id="current-soft-ap-status"></td></tr>
+  <tr class="soft-ap-details hidden"><td>Soft AP IP: </td><td id="soft-ap-ip"></td></tr>
+  <tr class="soft-ap-details hidden"><td>Soft AP clients: </td><td id="soft-ap-clients"></td></tr>
+</table>
+<div style="padding-top: 5px">
+<form action="/connect" method="post" id="connect-form" style="display: none">
     <label for="input_ssid">SSID: </label>
     <input name="ssid" type="text" id="input_ssid" required />
     <label for="input_password">Password: </label>
     <input name="password" type="password" id="input_password" />
     <input type="submit" value="Connect" />
 </form>
+<form action="/disconnect" method="post" id="disconnect-form" style="display: none">
+  <input type="submit" value="Disconnect">
+</form>
+</div>
+<script>
+  {{> fetch_status_js }}
+  var wifiStatuses = {
+    connected: 'WL_CONNECTED'
+  };
+
+  var wifiStatus;
+  var lastWifiStatus;
+  var wifiIP;
+  var ssid;
+  var softAPStatus;
+  var softAPIP;
+  var softAPClientsNumber;
+
+  var getStatusText = function(cStatus, lStatus) {
+    var status = cStatus;
+    if (lStatus && lStatus !== cStatus) {
+      status += " (" + lStatus + ")"
+    }
+    return status;
+  };
+
+  var setLoading = function() {
+    var elems = document.querySelector("#current-wifi-status, #current-soft-ap-status");
+    var length = elems.length;
+    for (var index = 0; index < length; index++) {
+        elems[index].innerText = "Loading...";
+        elems[index].classList.add("loading-text")
+    }
+  };
+
+  var unsetLoading = function() {
+    var elems = document.querySelector("#current-wifi-status, #current-soft-ap-status");
+    var length = elems.length;
+    for (var index = 0; index < length; index++) {
+      elems[index].classList.remove("loading-text")
+    }
+  };
+
+  var updateDocument = function() {
+    var wifiStatusDOM = document.getElementById('current-wifi-status');
+    var wifiSsidDOM = document.getElementById('wifi-ssid');
+    var wifiIpDOM = document.getElementById('wifi-ip');
+
+    var connectFormDOM = document.getElementById('connect-form');
+    var disconnectFormDOM = document.getElementById('disconnect-form');
+
+    var wifiDetailsDOMs = document.getElementsByClassName('wifi-details');
+
+    unsetLoading();
+
+    if (this.ssid) {
+      connectFormDOM.style.display = 'none';
+      disconnectFormDOM.style.display = null;
+      [].forEach.call(wifiDetailsDOMs, function (el) { el.classList.remove('hidden'); });
+    } else {
+      connectFormDOM.style.display = null;
+      disconnectFormDOM.style.display = 'none';
+      [].forEach.call(wifiDetailsDOMs, function (el) { el.classList.add('hidden'); });
+    }
+
+    wifiStatusDOM.innerText = getStatusText(this.wifiStatus, this.lastWifiStatus);
+    wifiSsidDOM.innerText = this.ssid;
+    wifiIpDOM.innerText = this.wifiIP;
+  };
+
+  var fetchStatusLoop = function() {
+    fetchStatus()
+        .then(function(status) {
+          this.wifiStatus = status.wifi.status;
+          this.lastWifiStatus = status.wifi.lastStatus;
+          this.wifiIP = status.wifi.localIP;
+          this.ssid = status.wifi.ssid;
+
+          updateDocument();
+          setTimeout(fetchStatusLoop, 5000);
+        });
+  };
+
+  setLoading();
+  fetchStatusLoop()
+
+</script>
 {{> footer }}
