CaptivePortal - connection info on root page - DONE

--- a/utils/WebServerTester/src/main/resources/templates/admin/admin.mustache
+++ b/utils/WebServerTester/src/main/resources/templates/admin/admin.mustache
@@ -100,6 +100,13 @@
             </td>
             <td>{{data.softAPClients}}</td>
           </tr>
+          <tr style="border-top: solid gray 1px">
+            <td><label for="statusDelayMs">statusDelayMs: </label></td>
+            <td>
+              <input type="text" id="statusDelayMs" name="statusDelayMs" value="{{data.statusDelayMs}}"/>
+            </td>
+            <td>{{data.statusDelayMs}}</td>
+          </tr>
         </table>
 
         <input type="submit" value="Apply"/>
