CaptivePortal - /disconnect, /disable-ap, /enable-ap action - DONE; regression bug: no content on root page after connect to wifi

--- a/utils/WebServerTester/src/main/resources/templates/header.mustache
+++ b/utils/WebServerTester/src/main/resources/templates/header.mustache
@@ -8,6 +8,15 @@
     input {
       display: block;
     }
+    input[type=submit] {
+      display: inline;
+      margin-right: 3px;
+      margin-top: 5px;
+
+    }
+    .inline {
+      display: inline;
+    }
     .data-ssid {
       font-weight: bold;
     }
