--- a/utils/WebServerTester/src/main/resources/templates/header.mustache
+++ b/utils/WebServerTester/src/main/resources/templates/header.mustache
@@ -26,8 +26,22 @@
     .hidden {
       display: none;
     }
+    .alert {
+      position: relative;
+      padding: .75rem 1.25rem;
+      margin-bottom: 1rem;
+      border: 1px solid transparent;
+      border-radius: .25rem;
+    }
+    .alert-success {
+      color: #155724;
+      background-color: #d4edda;
+      border-color: #c3e6cb;
+    }
     .error {
-      color: red;
+      color: #721c24;
+      background-color: #f8d7da;
+      border-color: #f5c6cb;
     }
     .loading-text {
       color: gray;
